--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -17,5 +17,5 @@
 // @import "01-elements/xeditable";
 @import "03-home/index";
 @import "04-search-and-filter/filter-bar";
-// @import "05-dramas/dramas";
+@import "05-dramas/dramas";
 // @import "07-users/user";
