--- a/app/assets/templates/dramas-index.html
+++ b/app/assets/templates/dramas-index.html
@@ -1,9 +1,10 @@
-<div>
-  <div class="search-filter">
+<div id="browse-page">
+<div class="row">
+  <div class="search-filter small-12 large-5 columns">
     <dramas-filter  items="dramas.items" total-dramas="dramas.totalDramas"></dramas-filter>
   </div>
-
-  <div class="clearfix">
+  <div class="large-5 columns">&nbsp;</div>
+  <div class="small-12 large-2 columns">
     <dir-pagination-controls  max-size=5
                               boundary-links="true"
                               on-page-change="dramas.pageChanged(newPageNumber)"
@@ -11,41 +12,38 @@
                               pagination-id="browse">
     </dir-pagination-controls>
   </div>
-  <div gridster= "dramas.gridsterOpts">
-    <div gridster-item="items"  dir-paginate= "drama in dramas.items | itemsPerPage: dramas.pageSize"
+
+</div>
+<div id="drama-browse">
+  <ul class="row small-up-1 medium-up-2 large-up-4">
+    <li class="column" dir-paginate= "drama in dramas.items | itemsPerPage: dramas.pageSize"
                                 current-page="dramas.pagination.current"
                                 total-items="dramas.totalDramas"
                                 pagination-id="browse"
     ng-cloak>
-      <md-content layout="row" layout-wrap layout-align="center start" layout-xs="column">
-        <div flex-xs="100" layout="column">
-          <md-card>
-            <a ui-sref="drama({dramaID: drama.id})">
-              <img src="{{drama.image_url}}" alt="{{drama.poster_file_name}}">
-            </a>
-            <md-card-title>
-              <md-card-title-text>
-                <a ui-sref="drama({dramaID: drama.id})">
-                  {{drama.name}}
-                </a>
-              </md-card-title-text>
-            </md-card-title>
-
-            <md-card-actions layout="row" layout-align="end center" ng-if="dramas.user">
-              <add-drama drama="drama"
-                          user="{{dramas.user.id}}"
-                          user-lists="dramas.userLists"
-                          selected-list="dramas.selectedList">
-              </add-drama>
-              <fave-drama drama="drama" user-id="{{dramas.user.id}}"></fave-drama>
-            </md-card-actions>
-
-          </md-card>
+      <div class="card">
+        <div class="image">
+          <fave-drama drama="drama" user-id="{{dramas.user.id}}"></fave-drama>
+          <a ui-sref="drama({dramaID: drama.id})"><img src="{{drama.image_url}}" alt="{{drama.poster_file_name}}">
+          </a>
         </div>
-      </md-content>
-    </div>
-  </div>
-  <div class="clearfix">
+        <div class="content">
+          <a ui-sref="drama({dramaID: drama.id})"><span class="title">{{drama.name}}</span></a>
+        </div>
+        <div class="action">
+          <!-- <add-drama drama="drama"
+                      user="{{dramas.user.id}}"
+                      user-lists="dramas.userLists"
+                      selected-list="dramas.selectedList">
+          </add-drama> -->
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
+<div class="row">
+  <div class="small-12 large-10 columns">&nbsp;</div>
+  <div class="large-2 columns">
     <dir-pagination-controls max-size=5
                               boundary-links="true"
                               on-page-change="dramas.pageChanged(newPageNumber)"
@@ -54,3 +52,4 @@
     </dir-pagination-controls>
   </div>
 </div>
+<div>
