--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -15,6 +15,7 @@
 @import "00-layout/nav";
 // @import "01-elements/scaffolds";
 // @import "01-elements/xeditable";
+// @import "01-elements/tabs";
 @import "03-home/index";
 @import "04-search-and-filter/filter-bar";
 @import "05-dramas/dramas";
