--- a/app/assets/stylesheets/05-dramas/dramas.scss
+++ b/app/assets/stylesheets/05-dramas/dramas.scss
@@ -1,6 +1,38 @@
 .cast_section {
+  background: $ds-light-grey;
+  max-height: inherit;
+}
+
+#headline_div{
   background: white;
 }
+
+#pic_div {
+  position: relative;
+  img {
+    padding: 0 auto;
+    max-width:100%;
+    max-height: auto;
+  }
+}
+
+// #slash_div {
+//   width: 0;
+// 	height: 0;
+//   position: absolute;
+//   right: 0;
+//   top: 0;
+//   bottom: 5px;
+// 	border-bottom: 400px solid white;
+// 	border-left: 100px solid transparent;
+// }
+
+#end_div {
+  background: white;
+  max-height: inherit;
+}
+
+/* CAST SECTION */
 
 #cast_block{
   padding-left: 5%;
@@ -18,7 +50,7 @@
   padding-left: 4%;
   position:relative;
   width:27.85714285714286%; /* = (100-2.5) / 3.5 */
-  padding-bottom: 5%;
+  padding-bottom: 3%;
   float:left;
   overflow:hidden;
   visibility:hidden;
@@ -62,7 +94,7 @@
   padding:1% 1%;
   margin-top: 25%;
   margin-left: -54%;
-  color: $ds-orange;
+  color: #222;
   display: block;
   font-family: 'Roboto Condensed', sans-serif;
   -webkit-transform: skewY(-30deg) rotate(90deg);
@@ -76,14 +108,9 @@
   max-width: 90%;
   text-align: left;
 
-  #drama-browse {
-    max-width: 100%;
-
-    .drama-cards {
+  .drama-cards {
       margin: 10rem 0 20rem;
     }
-
-  }
 
   /*    TOASTS      */
   md-toast {
@@ -94,75 +121,16 @@
     }
   }
 
-  //
   // .range-label {
   //   display: inline;
   // }
   //
-
-
-
-  /*  Material like Cards */
-  .card {
-    font-family: 'Roboto', sans-serif;
-    overflow: hidden;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    color: #FA812F;
-    border-radius: 2px;
-    .title {
-      line-height: 3rem;
-      font-size: 1.5rem;
-      font-weight: 500;
-    }
-    .content {
-      padding: 1.3rem;
-      font-weight: 300;
-      border-radius: 0 0 2px 2px;
-    }
-    p {
-    margin: 0;
-    }
-    .action {
-      border-top: 1px solid rgba(160, 160, 160, 0.2);
-      padding: 1.3rem;
-    }
-    a {
-      color: #FA812F;
-      margin-right: 1.3rem;
-      transition: color 0.3s ease;
-      text-transform: uppercase;
-      text-decoration: none;
-    }
-    .favorite-drama {
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-    .image {
-      position: relative;
-      .title {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        padding: 1.3rem;
-        color: #fff;
-      }
-      img {
-        border-radius: 2px 2px 0 0;
-        top: 0;
-        left: 0;
-        width: 100%;
-
-      }
-    }
-  }
 
   /* FAVORITES   */
 
   .favorite-drama-active {
     color:red;
   }
-
 
   /*   RATING    */
   .drama-rating-picker {
@@ -237,75 +205,5 @@
 
   .review-hearts {
     color: red;
-  }
-
-
-
-
-
-
-  /*   DELETE SOON    */
-  .drama-image-and-info {
-    margin-bottom: 50px;
-    .drama-info {
-      padding-left: 30px;
-      h1 {
-        font-size: 3em;
-        margin: 0 0 10px 0;
-      }
-      h2 {
-        font-size: 1.5em;
-        margin: 0 0 10px 0;
-      }
-      td {
-        padding: 9px 5px;
-      }
-    }
-    img {
-      width: 100%;
-    }
-  }
-
-  md-card-title {
-    a,
-    a:visited {
-      color: #FE7A47;
-    }
-    a:hover {
-      background: none;
-    }
-  }
-
-  md-card md-card-title {
-    padding: 10px 16px 0;
-  }
-
-  md-input-container {
-    margin: 0;
-    vertical-align: top;
-    padding: 0 2px;
-  }
-  .drama-description {
-    margin-bottom: 20px;
-  }
-
-  .drama-review-and-cast {
-    h3 {
-      font-size: 2em;
-    }
-    h4 {
-      font-size: 1.3em;
-      font-weight: bold;
-    }
-    .drama-cast {
-      padding-left: 10px;
-      div {
-        text-align: center;
-        margin-bottom: 20px;
-      }
-      img {
-        width: 100%;
-      }
-    }
   }
 }
