Update drama show with rating

--- a/app/assets/stylesheets/03-home/index.scss
+++ b/app/assets/stylesheets/03-home/index.scss
@@ -7,7 +7,7 @@
   h1{
     padding-top: 50px;
     font-family: 'Roboto Slab', sans-serif;
-    color: $ds-light-grey;
+    color: $ds-lgt-grey;
   }
 
   .index-signup{
