--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -5,5 +5,5 @@ $ds-xlgt-orange: #FDDBCC;
 $ds-citrus: #FA812F;
 $ds-purple: #2B2A55;
 $ds-grey: #8f9183;
-$ds-light-grey:#EBECED;
+$ds-lgt-grey:#EBECED;
 $ds-off-white: #F9F9FF;
