--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -13,6 +13,8 @@
 
 /*    Custom stylesheets      */
 @import "00-layout/nav";
+@import "01-elements/rating";
+
 // @import "01-elements/scaffolds";
 // @import "01-elements/xeditable";
 // @import "01-elements/tabs";
