--- a/app/assets/templates/rating-template.html
+++ b/app/assets/templates/rating-template.html
@@ -1,6 +1,8 @@
-<ul class="rating">
-  <li ng-repeat="heart in hearts" ng-class="heart" ng-click="toggle($index)">
-    <i class="fa fa-heart fa-2x"></i>
-  </li>
-  <!-- <button ng-click="reset()">reset</button> -->
-</ul>
+<div class="drama-rating">
+  <ul>
+    <li ng-repeat="heart in hearts" ng-class="heart" ng-click="toggle($index)">
+      <i class="fa fa-heart fa-2x"></i>
+    </li>
+    <!-- <button ng-click="reset()">reset</button> -->
+  </ul>
+</div>
