--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -20,5 +20,8 @@
 // @import "01-elements/tabs";
 @import "03-home/index";
 @import "04-search-and-filter/filter-bar";
-@import "05-dramas/dramas";
+@import "05-dramas/dramas-index";
+@import "05-dramas/drama-show";
+
+
 // @import "07-users/user";
