--- a/app/assets/templates/add-drama.html
+++ b/app/assets/templates/add-drama.html
@@ -1,20 +1,14 @@
-<div ng-cloak>
-  <md-content>
-    <div>
-      <md-input-container>
-        <label>Add to your list</label>
-        <md-select  name ="add_drama"
-                    id="add_drama"
-                    ng-model="selectedList"
-                    ng-change="addToList(selectedList, drama.id)"
-                    class="form-control"
-                    aria-label="add_drama"
-                    aria-required="true" required>
-          <md-option ng-repeat="list in userLists" value="{{list.id}}">
-            {{list.name}}
-          </md-option>
-        </md-select>
-      </md-input-container>
-    </div>
-  </md-content>
+<div id="add_drama" ng-cloak>
+  <!-- <label for="add_drama_selector">Add</label> -->
+  <select class="form-control" name ="add_drama"
+          id="add_drama_selector"
+          ng-model="selectedList"
+          ng-change="addToList(selectedList, drama.id)"
+          class="form-control"
+          aria-label="add_drama"
+          aria-required="true" required>
+    <option ng-repeat="list in userLists" value="{{list.id}}">
+      {{list.name}}
+    </option>
+  <select>
 </div>
