Fix and style drama added alerts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,8 @@
  *= require angular-gridster
  *= require angular-xeditable
  *= require bootstrap-css-only
+ *= require ngToast/ngToast
+ *= require animate
  *= require_self
  *= require main
  */
